# pvr.rtl.radiofm

./: .gitignore  .travis.yml  CMakeLists.txt  FindRtlSdr.cmake  Findlibusb-1.0.cmake  Findrtlsdr.cmake  README.md  TODO
debian/: changelog  changelog.in  control  copyright  rules
depends/common/libusb/: 0001-make-private-libs-public.patch  CMakeLists.txt  libusb.txt
depends/common/rtl-sdr/: 0001-prevent-parts.patch  0001-static-only.patch  rtl-sdr.txt
lib/rtl-sdr/: CMakeLists.txt
pvr.rtl.radiofm/: PVRFMRadioAddonSettings.xml  addon.xml  addon.xml.in
pvr.rtl.radiofm/resources/language/English/: strings.po
pvr.rtl.radiofm/resources/language/resource.language.de_de/: strings.po
pvr.rtl.radiofm/resources/language/resource.language.en_gb/: strings.po
pvr.rtl.radiofm/resources/skins/skin.confluence/720p/: ChannelTuner.xml
pvr.rtl.radiofm/resources/skins/skin.estuary/1080i/: ChannelTuner.xml
src/: ChannelSettings.cpp  ChannelSettings.h  Definations.h  Definitions.h  DownConvert.cpp  DownConvert.h  Filter.cpp  Filter.h  FirFilter.cpp  FirFilter.h  FmDecode.cpp  FmDecode.h  FreqShift.cpp  FreqShift.h  IirFilter.cpp  IirFilter.h  RDSGroupDecoder.cpp  RDSGroupDecoder.h  RDSProcess.cpp  RDSProcess.h  RTL_SDR_Source.cpp  RTL_SDR_Source.h  RadioReceiver.cpp  RadioReceiver.h  Utils.cpp  Utils.h  XMLUtils.h  client.cpp  client.h  filtercoef.h  kodi_codec_descriptor.hpp  utils.cpp  utils.h  xbmc_codec_descriptor.hpp
